--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/rentcar?serverTimezone=Europe/Warsaw
+spring.datasource.username=root
+spring.datasource.password=sda123
 
